Fixing of too large images in carousel and modal,

--- a/styles.css
+++ b/styles.css
@@ -57,13 +57,18 @@ iframe {
 
 .carousel-inner img {
   max-height: 100px;
-  width: auto;
+  max-width: auto;
+  object-fit: cover;
 }
+
 .modal-dialog {
   max-width: 70%;
   max-height: 70%;
+  margin: auto;
 }
+
 .modal-content img {
-  width: 100%;
-  height: auto;
+  max-height: 100%;
+  max-width: 100%;
+  object-fit: contain;
 }
